<resources>
    <!-- Etiquetas -->
    <string name="app_name">FilmGoer</string>
    <string name="anno">Año: </string>
    <string name="duracion">Duración: </string>
    <string name="pais">País: </string>
    <string name="director">Director: </string>
    <string name="guion">Guión: </string>
    <string name="musica">Música: </string>
    <string name="fotografia">Fotografía: </string>
    <string name="reparto">Reparto: </string>
    <string name="genero">Género: </string>
    <string name="sinopsis">Sinopsis: </string>

    <!-- Hints -->
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_email">Email</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_confirmaContrasena">Confirma contrasena</string>
    <string name="hint_titulo">Título</string>
    <string name="hint_anno">Año</string>
    <string name="hint_duracion">Duración</string>
    <string name="hint_pais">País</string>
    <string name="hint_director">Director</string>
    <string name="hint_guion">Guión</string>
    <string name="hint_musica">Música</string>
    <string name="hint_fotografia">Fotografía</string>
    <string name="hint_reparto">Reparto</string>
    <string name="hint_genero">Género</string>
    <string name="hint_sinopsis">Sinopsis</string>
    <string name="hint_nota">Nota</string>
    <string name="hint_imagen">Url de la imagen</string>
    <string name="hint_trailer">Url del tráiler</string>

    <!-- Acciones -->
    <string name="boton_acceder">Acceder</string>
    <string name="texto_o">o</string>
    <string name="texto_crearCuenta"><u>Crear cuenta</u></string>
    <string name="boton_crearCuenta">Crear cuenta</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_editar">Editar</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_ayuda">Ayuda</string>
    <string name="boton_aceptar">Aceptar</string>

    <!-- Nombres de pantallas -->
    <string name="pantalla_registro">Crear cuenta</string>
    <string name="pantalla_peliculas">Películas</string>
    <string name="pantalla_anadir">Nueva película</string>
    <string name="pantalla_editar">Editar película</string>

    <!-- Toasts -->
    <string name="toast_no_iniciado">No se ha podido iniciar sesión</string>
    <string name="toast_no_registrado">No se ha podido registrar al usuario</string>
    <string name="toast_introduce_email">Introduce un email</string>
    <string name="toast_introduce_contrasena">Introduce una contraseña</string>
    <string name="toast_contrasena_incorrecta">Contraseña incorrecta</string>
    <string name="toast_email_no_valido">Email no válido</string>
    <string name="toast_campos_vacios">Hay campos vacíos</string>
    <string name="toast_contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="toast_pelicula_eliminada">Película eliminada</string>
    <string name="toast_pelicula_guardada">Película guardada</string>
    <string name="toast_accion_cancelada">Acción cancelada</string>
    <string name="toast_token_caducado">Sesión caducada</string>
    <string name="toast_no_internet">No hay conexión a internet, la información puede no estar actualizada</string>
    <string name="toast_error">Error</string>

    <!-- Mensajes -->
    <string name="mensaje_borrar_pelicula">Borrar película</string>
    <string name="mensaje_confirmacion_eliminar">Estás a punto de eliminar la película, ¿estás seguro?</string>
    <string name="mensaje_guardar_pelicula">Guardar película</string>
    <string name="mensaje_confirmacioin_guardar">Estás a punto de guardar la película, ¿estás seguro?</string>
    <string name="mensaje_usuario_no_existe">El usuario no existe</string>
    <string name="mensaje_salir">Salir</string>
    <string name="mensaje_confirmacion_salir">Estás a punto de salir de la aplicación, ¿estás seguro?</string>
    <string name="mensaje_cerrar_sesion">Cerrar sesión</string>
    <string name="mensaje_confirmacion_cerrar_sesion">Estás a punto de cerrar sesión, ¿estás seguro?</string>
</resources>