<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margen_activity_default_horizontal"
    android:paddingVertical="@dimen/margen_activity_default_vertical"
    android:background="@color/primaryLightColor"
    tools:context=".activities.EditarActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirTitulo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_titulo"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirAnno"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAnadirTitulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirAnno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_anno"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirDuracion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAnadirAnno">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirDuracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_duracion"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirPais"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAnadirDuracion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pais"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirDirector"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAnadirPais">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_director"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirGuion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAnadirDirector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirGuion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_guion"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirMusica"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAnadirGuion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirMusica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_musica"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirFotografia"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAnadirMusica">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirFotografia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fotografia"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirReparto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAnadirFotografia">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirReparto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reparto"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirGenero"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAnadirReparto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_genero"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirSinopsis"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAnadirGenero">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirSinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sinopsis"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirNota"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAnadirSinopsis">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nota"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirImagen"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAnadirNota">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_imagen"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAnadirTrailer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/componente_til_ancho"
            android:layout_height="@dimen/componente_til_alto"
            android:layout_marginTop="@dimen/margen_vertical_entre_edittexts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAnadirImagen">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAnadirTrailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_trailer"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>